ask the user before overwriting files when exporting keys

Now when the user wants to export the public key to a file and that file
already exists the user is asked about overwriting the file.

BUG:283215
REVIEW:102786
CCMAIL:laffdez@gmail.com